----------------------------------------------------------------------
 OmegaT 3.1.8 update 1
----------------------------------------------------------------------
   1 Enhancement
   6 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.8 update 1 vs. 3.1.8

  Implemented requests:

  - Machine translation with Yandex 
  https://sourceforge.net/p/omegat/feature-requests/790/

  Bug fixes:

  - There's now a 3-second retry when OmegaT attempts to rename files

  - In some specific cases, the content of Mozilla DTD files was not 
loaded

  - License information was missing from the lib folder of binary
distributions

  - Wrong Swedish segmentation exception corrected

  - Newline characters are lost in Japanese target documents
  https://sourceforge.net/p/omegat/bugs/721/ 
  
  - Filtering after a search with no live segments freezes OmegaT
  https://sourceforge.net/p/omegat/bugs/692/

  Localisation updates:

  - Belarusian localisation updated to 3.1.8 (UI, tutorial, scripts, readme)
  - Russian localisation updated to 3.1.8 update 2 (UI, tutorial, scripts, readme)

----------------------------------------------------------------------
 OmegaT 3.1.8 (2014-12-04)
----------------------------------------------------------------------
   6 Enhancements
  10 Bug fixes
   5 Localisation updates
----------------------------------------------------------------------
3.1.8 vs. 3.1.7

  Implemented requests:
  
  - Allow custom background/foreground colors for different elements in the editor
  https://sourceforge.net/p/omegat/feature-requests/1035/

  - Show dialog for unsupported SVN errors 
  https://sourceforge.net/p/omegat/feature-requests/1041/

  - Allow configurable diff-style colours in fuzzy matching 
  https://sourceforge.net/p/omegat/feature-requests/900/

  Other enhancements:

  - It is now possible to customise colours used in the Fuzzy Matches pane  
