@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 3.1.8 update 1
 ----------------------------------------------------------------------
-   1 Enhancement
+   2 Enhancements
    6 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
@@ -11,6 +11,12 @@
 
   - Machine translation with Yandex 
   https://sourceforge.net/p/omegat/feature-requests/790/
+
+  Other enhancements:
+  
+  - ILIAS Language File filter. Those files can have the .lang or
+.lang.local extensions. As .lang files are also loaded by the Lang 
+Mozilla filter, it has to be unabled to load them with the ILIAS filter.
 
   Bug fixes:
 
